<?xml version="1.0" encoding="utf-8"?>


<!DOCTYPE resources [<!ENTITY currency "$">]>

<resources>
    <string name="app_name">Living</string>
    <string name="title_activity_main">Guide</string>
    <string name="title_activity_home">Home Move</string>
    <string name="subtitle_activity_main">Hey Steve! you have $15,00,000 as pre approved loan</string>
    <string name="subtitle_activity_home">Hi Steve! Good Morning</string>
    <string name="txt1_activity_main">First time buyer process</string>
    <string name="txt2_activity_main">Before you buy</string>
    <string name="txt3_activity_main">Jargon buster</string>
    <string name="txt4_activity_main">and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Living</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Home Screen related Text-->
    <string name="home_screen_item1">Guide</string>
    <string name="home_screen_item2">Budgeting</string>
    <string name="home_screen_item3">Finding</string>
    <string name="home_screen_item4">Buying</string>
    <string name="home_screen_item5">Moving</string>
    <string name="home_screen_item6">Improving</string>

    <string name="home_screen_item1_dscr">Taking you through the journey</string>
    <string name="home_screen_item2_dscr">Discover the home you can afford</string>
    <string name="home_screen_item3_dscr">Search for a home that\'s right for you</string>
    <string name="home_screen_item4_dscr">Purchasing your first home</string>
    <string name="home_screen_item5_dscr">Prepare for your moving day</string>
    <string name="home_screen_item6_dscr">Ideas and advice on new home</string>
    <string name="title_activity_budgeting_home">Budgeting</string>
    <string name="action_settings">Settings</string>


    <string name="txt1_activity_budgeting_home">Estimate Budget</string>
    <string name="txt2_activity_budgeting_home">Your Deposit</string>
    <string name="txt3_activity_budgeting_home">How much can I borrow</string>
    <string name="txt4_activity_budgeting_home">Saving a deposit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="estimate_budget_1_fragment">What\'s your plan</string>
    <string name="estimate_budget_2_fragment">What\'s your total income</string>
    <string name="estimate_budget_3_fragment">Monthly expenses</string>
    <string name="title_activity_estimate_budget">Estimate Budget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">email@capco.com</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="send_link">Send Link</string>
    <string name="dummy_username"></string>
    <string name="dummy_password"></string>
    <string name="title_activity_test_appt">TestAppt</string>
    <string name="dashboard_menu_tag">dashboard_tag</string>
    <string name="item_click_tag">item_index</string>
    <string name="form_lable_estimate_mortgage_amount">Estimate Mortgage Amount</string>

    <string name="amount">&currency; %.2f</string>

    <string name="your_curent_location">your current location</string>
    <string name="enter_city_text">Enter City</string>
    <string name="enter_district_text">Enter Locality</string>

    <string name="local_address">#3344,3rd street, 1st main....</string>


    <string-array name="expenses_header">
        <item>Debit Payment</item>
        <item>Bill Payment</item>
        <item>Entertainment</item>
        <item>Home</item>
        <item>Family</item>
        <item>Personal</item>
        <item>Transport</item>
        <item>Other</item>

    </string-array>
    <!--this is just temp solutions-->
    <string-array name="expenses_header_alternative">
        <item>creadit_card</item>
        <item>loan_rapayment</item>
        <item>electricity_bill</item>
        <item>cinema</item>
        <item>maintenance</item>
        <item>child_care</item>
        <item>fitness</item>
        <item>fuel</item>

    </string-array>
    <string name="title_activity_area_guide">Area Guide</string>

    <string name="title_activity_find_property">Finding your property</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="title_activity_forgot_password">Forgot Password</string>

    <string name="pref_title_stick_container">Stick layer to</string>

    <string name="pref_title_transformer">Transformer</string>

    <string name="pref_title_enable_preview_mode">Enable preview mode</string>

    <string name="pref_title_show_shadow">Show shadow</string>

    <string name="pref_title_show_offset">Closed offset</string>

    <string name="open_button_container">Open</string>

    <string name="close_button_container">Close</string>

    <string name="swipe_label">Swipe!</string>

    <string name="swipe_left_label">Swipe left!</string>

    <string name="swipe_right_label">Swipe right!</string>

    <string name="swipe_up_label">Swipe up!</string>

    <string name="swipe_down_label">Swipe down!</string>

    <string name="label_right">Right</string>

    <string name="label_left">Left</string>

    <string name="label_top">Top</string>

    <string name="label_bottom">Bottom</string>

    <string name="label_none">None</string>

    <string name="label_alpha">Alpha</string>

    <string name="label_rotation">Rotation</string>

    <string name="label_slide_joy">Slide Joy!</string>

    <string name="not_applicable">n/a</string>


    -
    <string-array name="pref_list_titles">

        <item>@string/label_right</item>

        <item>@string/label_left</item>

        <item>@string/label_top</item>

        <item>@string/label_bottom</item>

    </string-array>


    <string-array name="pref_list_values">

        <item>right</item>

        <item>left</item>

        <item>top</item>

        <item>bottom</item>

    </string-array>


    <string-array name="pref_transform_list_titles">

        <item>@string/label_none</item>

        <item>@string/label_alpha</item>

        <item>@string/label_rotation</item>

        <item>@string/label_slide_joy</item>

    </string-array>


    <string-array name="pref_transform_list_values">

        <item>none</item>

        <item>alpha</item>

        <item>rotation</item>

        <item>slide</item>

    </string-array>

    <string name="pref_go">Go!</string>

    <!--<string name="hint_host">127.0.0.1</string>-->
    <string name="hint_host">10.75.56.134</string>
    <string name="hint_host_port">8080</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
